# rts-framework

./: CMakeLists.txt  README.md  game.cpp  game.h  game_new.cpp  game_new.h  game_rts.cpp  game_rts.h  game_sidescroller.cpp  game_sidescroller.h  gen_neighbours.py  main.cpp  object.h  rts_framework.cpp  rts_framework.sln  rts_framework.vcxproj  rts_framework.vcxproj.filters  text.vert  unit.h
assets/: collidable.cpp  collidable.h  collidable_new.cpp  collidable_new.h  colour.cpp  colour.h  enemy.cpp  enemy.h  general_tooltip.h  moveable.cpp  moveable.h  moveable_new.cpp  moveable_new.h  nation.cpp  nation.h  panel.cpp  panel.h  particle_group.h  planet.cpp  planet.h  player.cpp  player.h  poc_colour_shift.cpp  province.cpp  province.h  text.cpp  text.h  text_entry.h  text_new.cpp  text_new.h  unit.cpp  unit.h
data/: gen_neighbours.py  level_designer.py  province_colours.txt
data/levels/: level_example.json
data/scripts/: anim.txt  slide.txt  switcher.txt  test.txt  test2.txt  test3.txt
data/tutorial/: adding_new_provinces.md  (+2 more)
defs/: colour.h  nation.h  nation_new.h  object.h  province.h  province_mv.h  province_new.h  unit.h  unit_new.h
effects/: fire.cpp  fire.h  ice.cpp  ice.h  stars.cpp  stars.h
include/: error.h  glad.c  json.hpp  miniaudio.h  shader.h  stb_image.h
io/: audio.cpp  audio.h  gamepad.cpp  gamepad.h  keyboard.cpp  keyboard.h  keyboard_new.cpp  keyboard_new.h  mouse.cpp  mouse.h  mouse_new.cpp  mouse_new.h
shaders/: coloured.frag  coloured.vert  text.frag  text.vert  textured.frag  textured.vert
shapes/: circle.cpp  circle.h  circle_new.cpp  circle_new.h  square.cpp  square.h
tools/: TextRenderer.cpp  TextRenderer.hpp  TextRendererNew.cpp  TextRendererNew.h  colour.cpp  colour.h  common.cpp  common.h  common_new.cpp  common_new.h  console.cpp  console.h  console_new.cpp  console_new.h  fonts.cpp  fonts.h  image.cpp  image.h  loader.cpp  loader.h  loader_new.cpp  loader_new.h  render.cpp  render.h  render2.cpp  render_new.cpp  render_new.h  stb_image.h  structs.h  text_renderer.cpp  text_renderer.h  ui_manager.cpp  ui_manager.h
(+40 files in other folders)
